Turno error fixed. Tests implemented
Project final build.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -7,7 +7,7 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%highlight(%-5level)] [%cyan(%t
 #server.port=8081
 #JPA CONFIGURATIONS
 #ddl-auto - cuando se ejecuta la aplicacion hace lo que se le indica con la base de datos (create, create-drop, update, validate)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
@@ -15,6 +15,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/finalProject
+spring.datasource.url=jdbc:h2:~/finalProjectTest
 spring.datasource.username=sa
 spring.datasource.password=sa
